--- a/mainPage.html
+++ b/mainPage.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="mainPage.css">
+	<title>Parki Narodowe</title>
 </head>
 <body>
 
@@ -27,9 +28,38 @@
 	</div>
 	
 	<div class="btn-group">
-		<button class="button">Button</button>
-		<button class="button">Button</button>
-		<button class="button">Button</button>
+		<button class="button"></button>
+		<button class="button"></button>
+		<button class="button"></button>
+	</div>
+	
+	<div class="btn-group">
+		<button class="button"></button>
+		<button class="button"></button>
+		<button class="button"></button>
+	</div>
+	
+	<div class="btn-group">
+		<button class="button"></button>
+		<button class="button"></button>
+		<button class="button"></button>
+	</div>
+	
+	<div class="btn-group">
+		<button class="button"></button>
+		<button class="button"></button>
+		<button class="button"></button>
+	</div>
+	
+	<div class="btn-group">
+		<button class="button"></button>
+		<button class="button"></button>
+		<button class="button"></button>
+	</div>
+	
+	<div class="btn-group">
+		<button class="button"></button>
+		<button class="button"></button>
 	</div>
 <div>
 
