--- a/mainPage.html
+++ b/mainPage.html
@@ -8,8 +8,8 @@
 
 <div class="navbar">
 	<ul>
-		<li><a href="#home">Parki narodowe</a></li>
-		<li><a href="#news">Humor</a></li>
+		<li><a href="mainPage.html">Parki narodowe</a></li>
+		<li><a href="humor.html">Humor</a></li>
 		<li><a href="#contact">Kontakt</a></li>
 	</ul>
 </div>
@@ -18,7 +18,8 @@
 	<div class="btn-group">
 		<button class="button"></button>
 		<button class="button"></button>
-		<button class="button"></button>
+		<button class="button" onclick="location.href='biebrzanskiParkNarodowy.html'" ></button>
+		
 	</div>
 
 	<div class="btn-group">
@@ -61,7 +62,7 @@
 		<button class="button"></button>
 		<button class="button"></button>
 	</div>
-<div>
+</div>
 
 </body>
 </html>
