--- a/mainPage.html
+++ b/mainPage.html
@@ -25,7 +25,7 @@
 	<div class="btn-group">
 		<button class="button"></button>
 		<button class="button"></button>
-		<button class="button"></button>
+		<button class="button" onclick="location.href='drawienskiParkNarodowy.html'"></button>
 	</div>
 	
 	<div class="btn-group">
@@ -53,7 +53,7 @@
 	</div>
 	
 	<div class="btn-group">
-		<button class="button"></button>
+		<button class="button" onclick="location.href='tatrzanskiParkNarodowy.html'"></button>
 		<button class="button"></button>
 		<button class="button"></button>
 	</div>
