Dodano nowe Parki

--- a/biebrzanskiParkNarodowy.html
+++ b/biebrzanskiParkNarodowy.html
@@ -11,7 +11,7 @@
 	<ul>
 		<li><a href="mainPage.html">Parki narodowe</a></li>
 		<li><a href="humor.html">Humor</a></li>
-		<li><a href="#contact">Kontakt</a></li>
+		<li><a href="contact.html">Kontakt</a></li>
 	</ul>
 </div>
 
@@ -21,7 +21,7 @@
 	  <div class="leftcolumn">
 		<div class="card">
 		  <h2>Biebrzański Park Narodowy</h2>
-		  <h5>Osowiec-Twierdza 8, 19-110 (53.473460099369, 22.65743263068811)</h5>
+		  <h5>19-110 Osowiec-Twierdza 8 (53.473460099369, 22.65743263068811)</h5>
 		   <div id = "map" style = "width: 100%; height: 580px"></div>
 				<script src = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 				<script>
