--- a/drawienskiParkNarodowy.html
+++ b/drawienskiParkNarodowy.html
@@ -11,7 +11,7 @@
 	<ul>
 		<li><a href="mainPage.html">Parki narodowe</a></li>
 		<li><a href="humor.html">Humor</a></li>
-		<li><a href="#contact">Kontakt</a></li>
+		<li><a href="contact.html">Kontakt</a></li>
 	</ul>
 </div>
 
