--- a/mainPage.html
+++ b/mainPage.html
@@ -10,21 +10,20 @@
 	<ul>
 		<li><a href="mainPage.html">Parki narodowe</a></li>
 		<li><a href="humor.html">Humor</a></li>
-		<li><a href="#contact">Kontakt</a></li>
+		<li><a href="contact.html">Kontakt</a></li>
 	</ul>
 </div>
 
 <div class="main">
 	<div class="btn-group">
-		<button class="button"></button>
+		<button class="button" onclick="location.href='babiogorskiParkNarodowy.html'"></button>
 		<button class="button"></button>
 		<button class="button" onclick="location.href='biebrzanskiParkNarodowy.html'" ></button>
-		
 	</div>
 
 	<div class="btn-group">
-		<button class="button"></button>
-		<button class="button"></button>
+		<button class="button" onclick="location.href='bieszczadzkiParkNarodowy.html'"></button>
+		<button class="button" onclick="location.href='boryTucholskie.html'"></button>
 		<button class="button" onclick="location.href='drawienskiParkNarodowy.html'"></button>
 	</div>
 	
@@ -41,15 +40,15 @@
 	</div>
 	
 	<div class="btn-group">
+		<button class="button" onclick="location.href='ojcowskiParkNarodowy.html'"></button>
 		<button class="button"></button>
-		<button class="button"></button>
-		<button class="button"></button>
+		<button class="button" onclick="location.href='poleskiParkNarodowy.html'"></button>
 	</div>
 	
 	<div class="btn-group">
 		<button class="button"></button>
 		<button class="button"></button>
-		<button class="button"></button>
+		<button class="button" onclick="location.href='swietokrzyskiParkNarodowy.html'"></button>
 	</div>
 	
 	<div class="btn-group">
@@ -59,8 +58,8 @@
 	</div>
 	
 	<div class="btn-group">
-		<button class="button"></button>
-		<button class="button"></button>
+		<button class="button" onclick="location.href='wigierskiParkNarodowy.html'"></button>
+		<button class="button" onclick="location.href='wolinskiParkNarodowy.html'"></button>
 	</div>
 </div>
 
