--- a/mainPage.html
+++ b/mainPage.html
@@ -17,7 +17,7 @@
 <div class="main">
 	<div class="btn-group">
 		<button class="button" onclick="location.href='babiogorskiParkNarodowy.html'"></button>
-		<button class="button"></button>
+		<button class="button" onclick="location.href='białowieskiParkNarodowy.html'"></button>
 		<button class="button" onclick="location.href='biebrzanskiParkNarodowy.html'" ></button>
 	</div>
 
@@ -28,15 +28,15 @@
 	</div>
 	
 	<div class="btn-group">
-		<button class="button"></button>
-		<button class="button"></button>
-		<button class="button"></button>
+		<button class="button" onclick="location.href='gorczańskiParkNarodowy.html'"></button>
+		<button class="button" onclick="location.href='ParkNarodowyGórStołowych.html'"></button> 
+		<button class="button" onclick="location.href='kampinoskiParkNarodowy.html'"></button> 
 	</div>
 	
 	<div class="btn-group">
+		<button class="button" onclick="location.href='karkonoskiParkNarodowy.html'"></button> 
 		<button class="button"></button>
-		<button class="button"></button>
-		<button class="button"></button>
+		<button class="button" onclick="location.href='narwiańskiParkNarodowy.html'"></button>
 	</div>
 	
 	<div class="btn-group">
