Dodano nowe Parki
Dodano Parki Narodowe: Magurski, "Ujście Warty", Pieniński, Roztoczański, Słowiński, Wielkopolski

--- a/mainPage.html
+++ b/mainPage.html
@@ -35,26 +35,26 @@
 	
 	<div class="btn-group">
 		<button class="button" onclick="location.href='karkonoskiParkNarodowy.html'"></button> 
-		<button class="button"></button>
+		<button class="button" onclick="location.href='magurskiParkNarodowy.html'"></button>
 		<button class="button" onclick="location.href='narwiańskiParkNarodowy.html'"></button>
 	</div>
 	
 	<div class="btn-group">
 		<button class="button" onclick="location.href='ojcowskiParkNarodowy.html'"></button>
-		<button class="button"></button>
+		<button class="button" onclick="location.href='pienińskiParkNarodowy.html'"></button>
 		<button class="button" onclick="location.href='poleskiParkNarodowy.html'"></button>
 	</div>
 	
 	<div class="btn-group">
-		<button class="button"></button>
-		<button class="button"></button>
+		<button class="button" onclick="location.href='roztoczańskiParkNarodowy.html'"></button>
+		<button class="button" onclick="location.href='słowińskiParkNarodowy.html'"></button>
 		<button class="button" onclick="location.href='swietokrzyskiParkNarodowy.html'"></button>
 	</div>
 	
 	<div class="btn-group">
 		<button class="button" onclick="location.href='tatrzanskiParkNarodowy.html'"></button>
-		<button class="button"></button>
-		<button class="button"></button>
+		<button class="button" onclick="location.href='ParkNarodowyUjścieWarty.html'"></button>
+		<button class="button" onclick="location.href='WielkopolskiParkNarodowy.html'"></button>
 	</div>
 	
 	<div class="btn-group">
