Aktualizacje stron: kontakt i main

--- a/humor.html
+++ b/humor.html
@@ -15,7 +15,7 @@ function podziekowanie() {
 	<ul>
 		<li><a href="mainPage.html">Parki narodowe</a></li>
 		<li><a href="humor.html">Humor</a></li>
-		<li><a href="contact.html">Kontakt</a></li>
+		<li><a href="kontakt.html">Kontakt</a></li>
 	</ul>
 </div>
 
